# baudoku_backend

./: .env.example  .gitignore  README.md  mise.toml  pyproject.toml  railway.json
scripts/: cleanup_zero_byte_media.py
src/baudoku_api/: __init__.py  ai.py  auth.py  config.py  dependencies.py  domain.py  email_delivery.py  main.py  rate_limit.py  schemas.py  supabase_client.py
src/baudoku_api/reports/: __init__.py  docx_builder.py  image_processing.py  letterhead.py  pdf_builder.py  plan_export.py  plan_render.py  report_content.py
src/baudoku_api/repositories/: __init__.py  ai_operations.py  defect_media_operations.py  media_integrity.py  project_core.py  project_helpers.py  projects.py  protocol.py  report_generation.py  repository_access.py  sync_operations.py  workflow_operations.py
src/baudoku_api/routers/: ai.py  health.py  projects.py  workflows.py
templates/: bba_briefbogen.docx
tests/: test_ai_provider.py  test_auth_ai_rate_limit.py  test_dependencies_and_clients.py  test_email_delivery.py  test_health.py  test_plan_render.py  test_project_status.py  test_projects.py  test_report_docx_builder.py  test_report_email_workflow.py  test_report_pdf_builder.py  test_repository_regressions.py  test_security_hardening.py  test_seed_data.py  test_workflows.py  workflow_fakes.py
