[project]
name = "baudoku-api"
version = "0.1.0"
description = "FastAPI backend for the BBA construction documentation app."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=2.0.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "pydantic-settings>=2.6.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.0",
    "supabase>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baudoku_api"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
